--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container__conteudo">
             <div class="container__informacoes">
                 <div class="container__texto">
-                    <h1></h1>
+                    <h1>Secret Number Game</h1>
                     <p class="texto__paragrafo"></p>
                 </div>
                 <input type="number" min="1" max="1000" class="container__input">
